fix: move of() method test codes
1. move of() method test codes from dto to entity
2. add message test code to Thrown test code