@@ -5,7 +5,7 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import java.util.List;
+import java.util.Arrays;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.BDDAssertions.then;
@@ -14,15 +14,15 @@ class EntriesTest {
 
     private static Stream<Arguments> provideArguments() {
         return Stream.of(
-                Arguments.of(new Entry[]{new Entry("pobi"), new Entry("honux")}, 2),
-                Arguments.of(new Entry[]{new Entry("pobi"), new Entry("honux"), new Entry("jk")}, 3)
+                Arguments.of(new String[]{"pobi", "honux"}, 2),
+                Arguments.of(new String[]{"pobi", "honux", "jk"}, 3)
         );
     }
 
     @ParameterizedTest
-    @DisplayName("생성자 유효성 처리 확인")
+    @DisplayName("참가자 수 반환 메소드 검증")
     @MethodSource("provideArguments")
-    void getPersonnel(Entry[] entries, int expected) {
-        then(new Entries(List.of(entries)).getPersonnel()).isEqualTo(expected);
+    void getPersonnel(String[] names, int expected) {
+        then(Entries.of(Arrays.asList(names)).getPersonnel()).isEqualTo(expected);
     }
 }
